argo/services/yopass/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: yopass
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 1337
      protocol: TCP
