argo/services/yopass/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yopass
spec:
  ingressClassName: traefik
  rules:
    - host: yopass.cindergla.de
      http:
        paths:
          - backend:
              service:
                name: yopass
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - yopass.cindergla.de
